added rest template